[gd_scene load_steps=5 format=3 uid="uid://i3aaqjclqwe7"]

[ext_resource type="Script" path="res://scripts/Enemy.gd" id="1_ovxqd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0w008"]
size = Vector2(64, 96)

[sub_resource type="CircleShape2D" id="CircleShape2D_3e0c0"]
radius = 193.494

[sub_resource type="CircleShape2D" id="CircleShape2D_gw03i"]
radius = 64.0

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
motion_mode = 1
slide_on_ceiling = false
script = ExtResource("1_ovxqd")

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PackedVector2Array(-32, 48, -32, -48, 32, -48, 32, 48)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_0w008")

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
shape = SubResource("CircleShape2D_3e0c0")

[node name="DamageZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageZone"]
shape = SubResource("CircleShape2D_gw03i")

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
[connection signal="body_entered" from="DamageZone" to="." method="_on_damage_zone_body_entered"]
